--- a/shared.css
+++ b/shared.css
@@ -63,12 +63,30 @@ body {
   z-index: 10;
   /* background-color: var(--nav-color); */
   background: linear-gradient(90deg, var(--nav-color), var(--nav-color2));
-  padding: 0rem 1.6rem;
+  padding: 0rem 2%;
   width: 100%;
   height: 5.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.title__box {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon__box {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav__icon {
+  margin-right: 5%;
+  height: 75%;
 }
 
 .nav__title {
