--- a/css/details.css
+++ b/css/details.css
@@ -100,7 +100,8 @@
 }
 
 .Trailers__header-box,
-.Teasers__header-box {
+.Teasers__header-box,
+.Cast__header-box {
   width: 100%;
   height: 6rem;
   padding-left: 1.6rem;
@@ -109,7 +110,8 @@
 }
 
 .Trailers__header,
-.Teasers__header {
+.Teasers__header,
+.Cast__header {
   font-size: 2.5rem;
   font-weight: 600;
   font-family: var(--ubuntu-font);
@@ -133,7 +135,42 @@
   border-radius: 2rem;
 }
 
+.Cast__container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  justify-content: space-evenly;
+}
 
+.Cast__profile {
+  width: 100%;
+  padding: 4%;
+  aspect-ratio: .6;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 8px;
+
+}
+
+.Cast__img-container {
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  aspect-ratio: 0.7;
+  border-radius: 8px;
+}
+
+.Cast__img {
+  width: 100%;
+}
+
+.Cast__name {
+  padding: 4%;
+  font-size: 1.5rem;
+  text-align: center;
+}
 
 
 
@@ -152,6 +189,10 @@
 
   .overview {
     font-size: 1.5rem;
+  }
+
+  .Cast__container {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   }
 }
 
@@ -185,10 +226,10 @@
     font-size: 1.4rem;
   }
 
-  .Trailer__container,
-  .Teaser__container {
-    grid-template-columns: 1fr;
+  .Cast__container {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   }
+
 }
 
 @media(max-width:27rem) {
@@ -197,13 +238,13 @@
     font-size: 2.4rem;
   }
 
-  .Trailer__container>.video:nth-of-type(4),
-  .Teaser__container>.video:nth-of-type(4),
-  .Trailer__container>.video:nth-of-type(5),
-  .Teaser__container>.video:nth-of-type(5),
-  .Trailer__container>.video:nth-of-type(6),
-  .Teaser__container>.video:nth-of-type(6) {
-    display: none;
+  .Trailer__container,
+  .Teaser__container {
+    grid-template-columns: 1fr;
+  }
+
+  .Cast__container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
 
@@ -222,5 +263,9 @@
 
   .overview {
     font-size: 1.3rem;
+  }
+
+  .Cast__container {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
