--- a/css/people.css
+++ b/css/people.css
@@ -1,7 +1,7 @@
 .people__container {
   width: 100%;
+  height: 100%;
   padding: 2%;
-  height: 40rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -26,39 +26,79 @@
 
 .people__biography-box {
   width: 70%;
-  min-height: 50%;
-  max-height: 85%;
+  max-height: 30rem;
   margin-right: 2%;
   background-color: var(--nav-color-contrast);
-  border-radius: 1px;
-  outline: 1.5rem solid var(--nav-color-contrast);
+  border: 1.8rem solid var(--nav-color-contrast);
+  border-radius: 8px;
   overflow: scroll;
 }
 
 .people__biography {
   text-align: justify;
-  font-size: 1.8rem;
+  font-size: 1.9rem;
+}
+
+.Work__header-box {
+  width: 100%;
+  height: 6rem;
+  padding-left: 1.6rem;
+  display: flex;
+  align-items: center;
+}
+
+.Work__header {
+  font-size: 2.5rem;
+  font-weight: 600;
+  font-family: var(--ubuntu-font);
+  color: transparent;
+  background: linear-gradient(90deg, var(--nav-color), var(--nav-color2));
+  -webkit-background-clip: text;
+  animation: L1 1s ease;
+}
+
+.Work__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.Work__img-container {
+  width: 100%;
+}
+
+.Work__img {
+  width: 95%;
+  height: 97%;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: transform ease-out 0.1s, box-shadow ease-out 0.1s;
+}
+
+.Work__img:hover {
+  box-shadow: 4px 4px 16px var(--shadow-color);
+  transform: scale(101%);
+}
+
+.Work__img:active {
+  box-shadow: none;
+  transform: scale(99%);
 }
 
 
 
 
-
-@media(max-width:64rem) {
-  .people__biography {
-    font-size: 1.7rem;
-  }
-}
+@media(max-width:64rem) {}
 
 @media(max-width:48rem) {
-  .people__biography {
-    font-size: 1.6rem;
+  .Work__container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
 
 @media(max-width:40rem) {
   .people__container {
-    height: 65rem;
+    /* height: 100%; */
+    padding: 4%;
     flex-direction: column;
     justify-content: space-between;
   }
@@ -66,24 +106,27 @@
   .people__img-box {
     min-width: 18rem;
     margin-right: 0;
-  }
-
-  .people__biography-box {
-    width: 90%;
-    max-height: 40%;
-    margin-right: 0;
     margin-bottom: 4%;
   }
 
-}
-
-@media(max-width:27rem) {
   .people__biography-box {
-    margin-bottom: 6%;
+    width: 100%;
+    max-height: 20rem;
+    margin-right: 0;
   }
 
   .people__biography {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+  }
+
+  .Work__container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media(max-width:27rem) {
+  .Work__container {
+    grid-template-columns: 1fr 1fr;
   }
 }
 
