--- a/shared.css
+++ b/shared.css
@@ -54,7 +54,17 @@ body {
 }
 
 ::-webkit-scrollbar {
-  display: none;
+  height: 10px;
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(180deg, var(--nav-color), var(--nav-color2));
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 20px;
 }
 
 .nav {
